apps/miniflux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
