apps/miniflux/miniflux.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  type: ClusterIP
  selector:
    app: miniflux
  ports:
    - name: http
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  labels:
    app: miniflux
spec:
  selector:
    matchLabels:
      app: miniflux
  replicas: 1
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: "docker.io/miniflux/miniflux:2.2.7"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
