apps/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: feeds.mhnet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  name: http
  tls:
    - hosts:
        - feeds.mhnet.app
      secretName: miniflux-ingress-tls
